# librpc-rs

./: Cargo.toml  README.md
benches/: echo.rs
jsonrpc/: Cargo.toml
jsonrpc/benches/: echo.rs
jsonrpc/src/: client.rs  lib.rs  object.rs  result.rs
src/: channel.rs  client.rs  dispatcher.rs  lib.rs  responder.rs
