[package]
description = "Generic rpc framework for rust"
documentation = "https://docs.rs/librpc"
edition = "2021"
license = "MIT"
name = "librpc"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-timer-rs = "^0.1"
futures = "^0.3"
log = "^0.4"

[dev-dependencies]
futures-test = "^0.3"

criterion = {version = "0.4", features = [
  "async_futures",
  "html_reports",
]}

pretty_env_logger = "^0.4"

[[bench]]
harness = false
name = "echo"
