[package]
description = "Generic rpc framework for rust"
documentation = "https://docs.rs/librpc"
edition.workspace = true
license = "MIT"
name = "librpc"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-timer-rs = {workspace = true}
futures = {workspace = true}
log = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
futures-test = {workspace = true}
pretty_env_logger = {workspace = true}
thiserror = {workspace = true}
[[bench]]
harness = false
name = "echo"

[workspace]
members = ["./", "jsonrpc"]

[workspace.package]
edition = "2021"
version = "0.1.2"

[workspace.dependencies]
# serde support
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

# test
criterion = {version = "0.4", features = [
  "async_futures",
  "html_reports",
]}
futures-test = "^0.3"
pretty_env_logger = "^0.4"

# async 
async-timer-rs = "^0.1"
futures = "^0.3"

# logs
log = "^0.4"

# errors
thiserror = "1.0.38"

# internals
librpc = {path = ".", version = "^0.1"}
